--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   firebase_auth: ^6.0.1
   shared_preferences: ^2.5.3
+  flutter_screenutil: ^5.9.3
   # firebase_messaging: ^16.0.0
   # flutter_local_notifications: ^19.4.0
 
